changes in jenkins

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,24 +1,88 @@
 pipeline {
 agent any
+environment {
+LABS = credentials('labcreds')
+JAVA
+_
+HOME = '/opt/bitnami/java' // Set your JAVA
+_
+HOME path here.
+PATH = "${env.JAVA
+_
+HOME}/bin:${env.PATH}" // Add Java binaries to PATH
+}
 stages {
-stage('Build') {
+stage('Setup Virtual Environment') {
 steps {
-echo "build completed successfully"
+script {
+// Create a virtual environment with the project name (Retail pipeline)
+sh 'python3 -m venv retail
+_pipeline
+venv'
+_
+// Upgrade pip and install pipenv in the virtual environment
+sh '
+./retail
+_pipeline
+_
+venv/bin/pip install --upgrade pip'
+sh '
+./retail
+_pipeline
+_
+venv/bin/pip install pipenv'
+}
+}
+}
+stage('Install Dependencies') {
+steps {
+script {
+// Install your project dependencies (e.g., requirements.txt or Pipfile)
+sh '
+./retail
+_pipeline
+_
+venv/bin/pipenv install'
+}
 }
 }
 stage('Test') {
 steps {
-echo "test completed successfully"
+script {
+// Ensure JAVA
+_
+HOME is set for PySpark to work
+sh 'echo $JAVA
+HOME'
+_
+sh 'echo $PATH'
+// Run tests (assuming you are using pytest for tests)
+sh '
+./retail
+_pipeline
+_
+venv/bin/pipenv run pytest'
+}
 }
 }
 stage('Package') {
 steps {
-echo "package completed successfully"
+// Create the zip file but exclude the venv directory
+sh 'zip -r retailproject.zip .
+-x "retail
+_pipeline
+venv/*"'_
 }
 }
 stage('Deploy') {
 steps {
-echo "deploy completed successfully"
+// Add deployment steps here (e.g., deploy to a server or cloud)
+sh 'sshpass -p $LABS
+_
+PSW scp -o StrictHostKeyChecking=no -r
+retailproject.zip $LABS
+_
+USR@g02.itversity.com:/home/itv021926/retailproject'
 }
 }
 }
